--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_bloc: ^9.0.0
   either_dart: ^1.0.0
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
