--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_bloc: ^9.0.0
   either_dart: ^1.0.0
   get_it: ^8.0.3
+  flutter_svg: ^2.0.17
+  slang: ^4.4.1
 
 dev_dependencies:
   flutter_test:
@@ -61,8 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
