--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   get_it: ^8.0.3
   flutter_svg: ^2.0.17
   slang: ^4.4.1
+  intl: ^0.20.2
+  go_router: ^14.8.0
 
 dev_dependencies:
   flutter_test:
@@ -78,16 +80,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+  fonts:
+    - family: Rubik
+      fonts:
+        - asset: assets/fonts/Rubik-Italic-VariableFont_wght.ttf
+        - asset: assets/fonts/Rubik-VariableFont_wght.ttf
+        - asset: assets/fonts/Rubik-Bold.ttf
+        - asset: assets/fonts/Rubik-BoldItalic.ttf
+        - asset: assets/fonts/Rubik-SemiBold.ttf
+        - asset: assets/fonts/Rubik-SemiBoldItalic.ttf
+    - family: WorkSans
+      fonts:
+        - asset: assets/fonts/WorkSans-Italic-VariableFont_wght.ttf
+        - asset: assets/fonts/WorkSans-VariableFont_wght.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
