--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   get_it: ^8.0.3
   flutter_svg: ^2.0.17
   slang: ^4.4.1
-  intl: ^0.20.2
+  slang_flutter: ^4.4.0
+  intl: ^0.19.0
   go_router: ^14.8.0
 
 dev_dependencies:
@@ -52,6 +53,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  slang_build_runner: ^4.4.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
