--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   slang_flutter: ^4.4.0
   intl: ^0.19.0
   go_router: ^14.8.0
+  bloc_test: ^10.0.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +57,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.15
   slang_build_runner: ^4.4.2
+  mockito: ^5.4.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
