--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   go_router: ^14.8.0
   bloc_test: ^10.0.0
   equatable: ^2.0.7
+  freezed_annotation: ^2.4.2
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +59,7 @@ dev_dependencies:
   build_runner: ^2.4.15
   slang_build_runner: ^4.4.2
   mockito: ^5.4.5
+  freezed: ^2.5.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
